# mylogmate-api

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  Dockerfile.worker  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.claude/: settings.json
.claude/agents/: code-reviewer.md  pre-commit-checker.md
.claude/commands/: new-endpoint.md  prepare-commit.md  review-code.md  write-tests.md
.claude/rules/: ai-module.md  api-routes.md  database.md  workers.md
.claude/skills/alembic-migrations/: SKILL.md
.claude/skills/auth-jwt-oauth/: SKILL.md
.claude/skills/celery-tasks/: SKILL.md
.claude/skills/docker-deployment/: SKILL.md
.claude/skills/encryption-security/: SKILL.md
.claude/skills/fastapi-routes/: SKILL.md
.claude/skills/llamaindex-integration/: SKILL.md
.claude/skills/pydantic-schemas/: SKILL.md
.claude/skills/pytest-testing/: SKILL.md
.claude/skills/qdrant-vectors/: SKILL.md
.claude/skills/rag-pipeline/: SKILL.md
.claude/skills/sqlalchemy-models/: SKILL.md
.claude/skills/structlog-logging/: SKILL.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 711c33ee9f69_create_initial_schema.py
app/: main.py
app/ai/: embeddings.py  llm_provider.py  prompts.py  qdrant_store.py  rag_pipeline.py
app/api/: deps.py
app/api/v1/: admin.py  auth.py  contexts.py  feedback.py  logs.py  recall.py  tags.py  templates.py
app/core/: config.py  exceptions.py  logging.py  rate_limit.py  security.py
app/db/: base.py  seed.py  session.py
app/db/models/: __init__.py  ai_query_log.py  chat_message.py  chat_session.py  context.py  feedback.py  log_entry.py  log_entry_tag.py  tag.py  template.py  user.py
app/schemas/: __init__.py  admin.py  auth.py  common.py  contexts.py  feedback.py  logs.py  recall.py  tags.py  templates.py
app/services/: admin.py  auth.py  contexts.py  feedback.py  logs.py  recall.py  tags.py  templates.py
app/workers/: celery_app.py  dispatch.py  email_tasks.py  embedding_tasks.py
docs/: ARCHITECTURE.md  DB_DESIGN.md  MASTER_PROMPT.md  PRD.md
tests/: conftest.py  test_admin.py  test_auth.py  test_calendar.py  test_contexts.py  test_feedback.py  test_health.py  test_llm_provider.py  test_logs.py  test_qdrant_store.py  test_recall.py  test_tags.py  test_templates.py  test_workers.py
