[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mylogmate-api"
version = "1.0.0"
description = "Work-logging + AI-recall backend API"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Validation & Settings
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Cache / Task Queue
    "celery[redis]>=5.4.0",
    "redis[hiredis]>=5.0.0",

    # Vector Database (Qdrant Cloud Inference — no local model needed)
    "qdrant-client>=1.9.0",

    # AI / RAG (LlamaIndex orchestration + Groq LLM)
    "llama-index-core>=0.10.0",
    "llama-index-llms-groq>=0.1.0",
    "llama-index-vector-stores-qdrant>=0.2.0",
    "groq>=0.7.0",

    # Auth & Security
    "PyJWT>=2.8.0",
    "bcrypt>=4.1.0",
    "cryptography>=42.0.0",
    "google-auth>=2.29.0",

    # Email (async SMTP)
    "aiosmtplib>=3.0.0",

    # Logging
    "structlog>=24.1.0",

    # Rate limiting
    "slowapi>=0.1.9",

    # HTTP client (tests + internal)
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-redis>=4.6.0",
    "greenlet>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ---------------------------------------------------------------------------
# Ruff — lint + format
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".git", "__pycache__", "alembic/versions", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C90"]
ignore = [
    "E501",   # line length handled by formatter
    "N818",   # exception names don't need Error suffix (we use AppError etc.)
    "B008",   # FastAPI Depends() calls in function defaults are intentional
    "UP046",  # Generic[T] kept for Pydantic v2 compatibility (PEP 695 not fully supported)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy — type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = ["celery.*", "kombu.*", "slowapi.*", "google.*", "aiosmtplib.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--tb=short -v --cov=app --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/alembic/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
